Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5104

crash in Item_field::used_tables with broken order by

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.4, 5.5.33, 5.3.12
    • 5.5.34, 10.0.6, 5.3.13
    • None
    • None

    Description

      Version: '10.0.4-MariaDB'  mariadb.org binary distribution
      [ERROR] mysqld got exception 0xc0000005 ;
       
      mysqld.exe!Item_field::used_tables()[item.cc:2670]
      mysqld.exe!Item_func::update_used_tables()[item_func.cc:447]
      mysqld.exe!st_select_lex::update_used_tables()[sql_lex.cc:3861]
      mysqld.exe!JOIN::optimize_inner()[sql_select.cc:1064]
      mysqld.exe!JOIN::optimize()[sql_select.cc:1010]
      mysqld.exe!st_select_lex_unit::optimize()[sql_union.cc:599]
      mysqld.exe!st_select_lex_unit::exec()[sql_union.cc:630]
      mysqld.exe!mysql_union()[sql_union.cc:38]
      mysqld.exe!handle_select()[sql_select.cc:349]
      mysqld.exe!execute_sqlcom_select()[sql_parse.cc:5123]
      mysqld.exe!mysql_execute_command()[sql_parse.cc:2518]
      mysqld.exe!mysql_parse()[sql_parse.cc:6269]
      mysqld.exe!dispatch_command()[sql_parse.cc:1280]
      mysqld.exe!do_command()[sql_parse.cc:989]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:232]
      mysqld.exe!io_completion_callback()[threadpool_win.cc:568]

      How to repeat:

      (select 1 order by x(y)) order by 1

      Attachments

        Activity

          People

            timour Timour Katchaounov (Inactive)
            sbester1 sbester1
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2d
                2d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.